--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -154,17 +154,3 @@ pre {
     display: none;
   }
 }
-
-
-.background-extended {
-  overflow: hidden;
-  background: black;
-  color: white;
-  background: $yellow-color;
-  color: black;
-
-  padding-top: 5em;
-  padding-bottom: 5em;
-
-  transform: scaleX(1.04) rotateZ(-1deg);
-}
